devtools and debugger is completed

--- a/lesson-plans/devtools-debugger/2-integrate/exercises/3-for-of-loops/2-mirror/index.html
+++ b/lesson-plans/devtools-debugger/2-integrate/exercises/3-for-of-loops/2-mirror/index.html
@@ -11,6 +11,7 @@
   <body>
     <form id="input">
       <label>mirror this text: <input id="to-mirror" type="text" /> </label>
+      <label>entre character: <input id="character" type="text" /> </label>
     </form>
 
     <hr />
